--- a/src/components/navbar/navbar1.css
+++ b/src/components/navbar/navbar1.css
@@ -1,15 +1,14 @@
-
-  nav{
+nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
     background-color: white;
-    padding: 20px 30px;
+    padding: 20px 80px;
     box-shadow: 0 5px rgba(0, 0, 0, 0.06);
   }
   #navbar{
     z-index: 100;
-    background-color: white;
+    background-color: aliceblue;
     display: flex;
     align-items: center;
     justify-content: center;
