--- a/src/components/Ideas/addIdea.css
+++ b/src/components/Ideas/addIdea.css
@@ -1,4 +1,5 @@
 
+
  h1 {
   
    border-bottom: 1px solid white;
@@ -18,26 +19,31 @@
    display: flex;
    flex-direction: column;
    justify-content: space-around;
-   margin: 0 auto;
+   margin: 100px auto;
    max-width: 500px;
    padding: 30px 50px;
  }
 
  input {
-   border: 1px solid #d9d9d9;
+   border: 3px solid black;
    border-radius: 4px;
    box-sizing: border-box;
    padding: 10px;
    width: 100%;
  }
+   input:focus, input:valid{
+  color: #ff6600;
+  border: #ff6600;
+}
 
  label {
    color: #3d3d3d;
    display: block;
    font-family: sans-serif;
    font-size: 14px;
-   font-weight: 500;
+   font-weight: 700;
    margin-bottom: 5px;
+
  }
 
  .error {
@@ -54,4 +60,31 @@
    font-size: 14px;
    margin: 20px 0px;
 }
-;
+
+.button{
+  border-radius: 10px;
+  border: none;
+  background-color: #ff8800;
+  color: #fff;
+  transition: all 0.5s;
+}
+.button:hover{
+  transform: translateY(-5px);
+  background: #4c4967;
+  color: #ff6600;
+}
+  form label{
+    padding: 10px;
+  }
+  select{
+    border-radius: 10px;
+    color: #ff6600;
+    text-align: center;
+  }
+  .switch-group .switch-off{
+    background-color: lightgray;
+  }
+  .switch-btn{
+    margin-left: 80%;
+  }
+  
