--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -235,13 +235,13 @@ input[type="password"]{
 }
 
 .warning{
-    border:1px solid red !important;
+    border:1px solid rgb(5, 5, 5) !important;
 }
 .green{
     background-color:green !important;
 }
 .text-warning{
-    border:1px solid red !important;
+    border:1px solid rgb(0, 0, 0) !important;
 }
 
 
