--- a/src/components/Ideas/addIdea.css
+++ b/src/components/Ideas/addIdea.css
@@ -1,5 +1,6 @@
 
 
+
  h1 {
   
    border-bottom: 1px solid white;
@@ -32,8 +33,8 @@
    width: 100%;
  }
    input:focus, input:valid{
-  color: #ff6600;
-  border: #ff6600;
+  color: #000000;
+  border: #000000;
 }
 
  label {
@@ -42,7 +43,9 @@
    font-family: sans-serif;
    font-size: 14px;
    font-weight: 700;
+   font-weight: 700;
    margin-bottom: 5px;
+
 
  }
 
@@ -60,6 +63,34 @@
    font-size: 14px;
    margin: 20px 0px;
 }
+
+.button{
+  border-radius: 10px;
+  border: none;
+  background-color: #ff8800;
+  color: #fff;
+  transition: all 0.5s;
+}
+.button:hover{
+  transform: translateY(-5px);
+  background: #4c4967;
+  color: #ff6600;
+}
+  form label{
+    padding: 10px;
+  }
+  select{
+    border-radius: 10px;
+    color: #ff6600;
+    text-align: center;
+  }
+  .switch-group .switch-off{
+    background-color: lightgray;
+  }
+  .switch-btn{
+    margin-left: 80%;
+  }
+  
 
 .button{
   border-radius: 10px;
