--- a/src/components/Ideas/addIdea.css
+++ b/src/components/Ideas/addIdea.css
@@ -1,121 +1,17 @@
 
 
 
- h1 {
-  
-   border-bottom: 1px solid white;
-   color: #3d3d3d;
-   font-family: sans-serif;
-   font-size: 20px;
-   font-weight: 600;
-   line-height: 24px;
-   padding: 10px;
-   text-align: center;
- }
-
- form {
-
-   background: white;
-   border: 1px solid #dedede;
-   display: flex;
-   flex-direction: column;
-   justify-content: space-around;
-   margin: 100px auto;
-   max-width: 500px;
-   padding: 30px 50px;
- }
-
- input {
-   border: 3px solid black;
-   border-radius: 4px;
-   box-sizing: border-box;
-   padding: 10px;
-   width: 100%;
- }
-   input:focus, input:valid{
-  color: #000000;
-  border: #000000;
-}
-
- label {
-   color: #3d3d3d;
-   display: block;
-   font-family: sans-serif;
-   font-size: 14px;
-   font-weight: 700;
-   font-weight: 700;
-   margin-bottom: 5px;
 
 
- }
 
- .error {
-   color: red;
-   font-family: sans-serif;
-   font-size: 12px;
-   height: 30px;
- }
-
- .submitButton {
-   background-color: #6976d9;
-   color: white;
-   font-family: sans-serif;
-   font-size: 14px;
-   margin: 20px 0px;
-}
-
-.button{
-  border-radius: 10px;
-  border: none;
-  background-color: #ff8800;
-  color: #fff;
-  transition: all 0.5s;
-}
-.button:hover{
-  transform: translateY(-5px);
-  background: #4c4967;
-  color: #ff6600;
-}
-  form label{
-    padding: 10px;
-  }
   select{
-    border-radius: 10px;
-    color: #ff6600;
+    width: 50%;
+    border-radius: 5px;
+    color: #030303;
     text-align: center;
+    margin-left: 10px;
+    border: none;
+    background-color: #f5f5f5;
   }
-  .switch-group .switch-off{
-    background-color: lightgray;
-  }
-  .switch-btn{
-    margin-left: 80%;
-  }
-  
 
-.button{
-  border-radius: 10px;
-  border: none;
-  background-color: #ff8800;
-  color: #fff;
-  transition: all 0.5s;
-}
-.button:hover{
-  transform: translateY(-5px);
-  background: #4c4967;
-  color: #ff6600;
-}
-  form label{
-    padding: 10px;
-  }
-  select{
-    border-radius: 10px;
-    color: #ff6600;
-    text-align: center;
-  }
-  .switch-group .switch-off{
-    background-color: lightgray;
-  }
-  .switch-btn{
-    margin-left: 80%;
-  }
   
