--- a/src/components/Ideas/view.css
+++ b/src/components/Ideas/view.css
@@ -1,101 +1,37 @@
-.idea__content h2{
-    text-align: center;
+body{background:#eee}
+
+.ratings i{
+  font-size: 16px;color: red
 }
-.idea__content li{
-    list-style: none;
+
+.strike-text{
+  color: red;
 }
 
-nav{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: white;
-    padding: 20px 30px;
-    box-shadow: 0 5px rgba(0, 0, 0, 0.06);
-  }
-  #navbar{
-    z-index: 100;
-    background-color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  #navbar li{
-    list-style: none;
-    padding: 0 20px;
-    position: relative;
-  }
-  #navbar li a{
-    text-decoration: none;
-    font-size: 1.2rem;
-    font-weight: 600;
-    color: black;
-    transition: 0.2s ease-in-out;
-  }
-  #navbar li a:hover{
-    color: blue;
-  }
-  #mobile{
-    display: none;
-  }
-  #mobile i{
-    color: black;
-  }
-  .fas{
-    margin-right: 10px;
-    font-size: 20px;
-  }
-   .border-sm-start-none{
-    display: flex;
-     width: 25% !important;
-  } 
-  @media screen and (max-width:400px) { 
-    .border-sm-start-none{
-      display: flex;
-       width: 100% !important;
-    } 
-  }
+.product-image{
+  width: 100%
+}
 
-  @media screen and (max-width:998px) {
-    nav{
-      /* display: flex;
-      align-items: center; */
-      justify-content: end;
-      /* background-color: white;
-      padding: 20px 80px;
-      box-shadow: 0 5px rgba(0, 0, 0, 0.06); */
-    }
-    #navbar{
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-      justify-content: flex-start;
-      position: fixed;
-      top: 100px;
-      right: -300px;
-      width: 300px;
-      height: 100vh;
-      color: white;
-      box-shadow: 0 40px 60px rgba(0, 0, 0, 0.1);
-      padding: 40px 0 0 10px;
-      transition: 0.3s ease-in-out;
-    }
-    .fas{
-      margin-right: 10px;
-    }
-    #navbar.active{
-      right: 0px;
-    }
+.dot{
+  height: 7px;
+  width: 7px;
+  margin-left: 6px;
+  margin-right: 6px;
+  margin-top: 3px;
+  background-color: blue;
+  border-radius: 50%;
+  display: inline-block
+}
 
-    #navbar li{
-      margin-bottom: 25px;
-    }
-    #mobile{
-      display: block;
-      margin-right: 10px;
-    }
-    #mobile i{
-      font-size: 24px;
-      cursor: pointer;
-    }
-  }
+.spec-1{
+  color: #938787;
+  font-size: 15px
+}
+
+h5{
+  font-weight: 400
+}
+
+.para{
+  font-size: 16px
+}
