design profile, manage profile and register page

--- a/src/components/navbar/navbar1.css
+++ b/src/components/navbar/navbar1.css
@@ -8,7 +8,7 @@ nav{
   }
   #navbar{
     z-index: 100;
-    background-color: aliceblue;
+    background-color: white;
     display: flex;
     align-items: center;
     justify-content: center;
